<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@mipmap/rslm" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <!--android:background="@color/input_login_hint"-->



        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutauth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_margin="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/field_code_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:text="@string/hint_code_number"
                android:textSize="20sp" />



            <EditText
                android:id="@+id/field_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone_number"
                 android:layout_marginLeft="5dp"
                android:maxLength="10"
                android:inputType="phone"
                android:focusable="true"/>

        </LinearLayout>

            <Button
                android:id="@+id/button_start_verification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:layout_marginTop="10dp"
                android:text="@string/start_phone_auth"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                android:theme="@style/AppTheme" />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutvarification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="3.0"
            android:layout_margin="20dp"
              android:visibility="gone"
           >


            <EditText
                android:id="@+id/field_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_verification_code"
                android:inputType="number" />

            <Button
                android:id="@+id/button_verify_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/verify_phone_auth"

                android:theme="@style/AppTheme"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"/>

            <Button
                android:id="@+id/button_resend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/resend_phone_auth"
                android:textColor="@android:color/holo_blue_dark"
                android:background="@android:color/white"
                android:theme="@style/AppTheme" />
        </LinearLayout>



</LinearLayout>